Fix positioning notifications with long text

https://bugzilla.gnome.org/show_bug.cgi?id=687724